# obs-screencap

./: Cargo.toml  LICENSE.md  README.md  build.rs  haxx.c  justfile
dbus_introspections/: org.freedesktop.portal.ScreenCast.xml
portal-screencast/: Cargo.toml  README.md
portal-screencast/src/: lib.rs
src/: generated.rs  lib.rs  main.rs  native-shims.c  native_shims.rs  portal.rs  request.rs  screenshare.rs  session.rs
