[package]
name = "obs-screencap"
version = "0.1.0"
authors = ["Will Speak <lithiumflame@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "portal-screencast"
]

[dependencies]
portal-screencast = { path = "portal-screencast/" }
pipewire =  { path = "/home/will/Repositories/pipewire-rs/pipewire" }
pipewire-sys =  { path = "/home/will/Repositories/pipewire-rs/pipewire-sys" }
# pipewire =  { git = "https://gitlab.freedesktop.org/iwillspeak/pipewire-rs.git", branch = "master" }