[package]
name = "obs-screencap"
version = "0.1.0"
authors = ["Will Speak <lithiumflame@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "portal-screencast"
]

[dependencies]
portal-screencast = { path = "portal-screencast/" }
pipewire-sys =  { git = "https://gitlab.freedesktop.org/iwillspeak/pipewire-rs.git", branch = "feature/streams" }
pipewire =  { git = "https://gitlab.freedesktop.org/iwillspeak/pipewire-rs.git", branch = "feature/streams" }

[build-dependencies]
cc = "1.0"
system-deps = "3.0"

[package.metadata.system-deps]
spa = { name = "libspa-0.2", version = "0.2" }
pipewire = { name = "libpipewire-0.3", version = "0.3" }