[package]
name = "obs-portal-screencap"
version = "0.1.0"
description = "Rustic interface to the ScreenCast Desktop Portal"
repository = "https://github.com/iwillspeak/obs-screencap"
license = "MIT"
# keywords = ["ffi","screen","capture","obs","linux"]
authors = ["Will Speak <lithiumflame@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
members = [
    "portal-screencast"
]

[dependencies]
portal-screencast = { path = "portal-screencast/" }
libspa-sys =  { git = "https://gitlab.freedesktop.org/iwillspeak/pipewire-rs.git", branch = "feature/streams" }
pipewire-sys =  { git = "https://gitlab.freedesktop.org/iwillspeak/pipewire-rs.git", branch = "feature/streams" }
pipewire =  { git = "https://gitlab.freedesktop.org/iwillspeak/pipewire-rs.git", branch = "feature/streams" }
obs-wrapper = { path = "../rust-obs-plugins" }

[build-dependencies]
cc = "1.0"
system-deps = "3.0"

[package.metadata.system-deps]
spa = { name = "libspa-0.2", version = "0.2" }
pipewire = { name = "libpipewire-0.3", version = "0.3" }